...
    case notStarted, inProgress, inReview, completed, canceled
    var id: String { rawValue }
    var title: String {
        switch self {
        case .notStarted: "Not started"
        case .inProgress: "In progress"
        case .inReview: "In review"
        case .completed: "Completed"
        case .canceled: "Canceled"
        }
    }
    var optionID: String {
        let suffix: String
...
